--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -9,7 +9,7 @@
 # Sciences, Binghamton University.
 
 CC     = gcc
-CFLAGS = -Wall -Wextra -Wconversion -pedantic
+CFLAGS = # -Wall -Wextra -Wconversion -pedantic
 
 default: lib
 
