--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -22,7 +22,7 @@ oz_demo: oz_demo.c
 .PHONY: zip
 zip:
 	mkdir -p build
-	zip build/proj1_gmaldonado.zip *.c Makefile
+	zip hw2_code_gmaldonado.zip *.c Makefile
 
 .PHONY: clean
 clean:
