--- a/pthread-barrier/Makefile
+++ b/pthread-barrier/Makefile
@@ -13,6 +13,11 @@ CFLAGS=-Wall -pthread -D PIPE_BUF_MAX=1024
 CC=gcc
 
 all: $(TARGET)
+
+.PHONY: main
+main: main.c
+	mkdir -p build
+	$(CC) $(CFLAGS) main.c mybarrier.c -o build/main -pthread
 	
 mybarrier.o: mybarrier.c mybarrier.h
 	$(CC) $(CFLAGS) -c $*.c
