--- a/pthread-barrier/Makefile
+++ b/pthread-barrier/Makefile
@@ -29,4 +29,4 @@ clean:
 .PHONY: zip
 zip: mybarrier.c mybarrier.h main.c
 	mkdir -p build
-	zip build/proj3_gmaldonado.zip mybarrier.c mybarrier.h main.c Makefile
+	zip build/proj3_gmaldonado.zip mybarrier.c mybarrier.h Makefile
